<resources>
    <string name="app_name">Example</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>My Profile</item>
        <item>Events</item>
        <item>Favourites</item>
        <item>Index</item>
        <item>Contact Us</item>
        <item>Feedback</item>
        <item>Settings</item>
        <item>My School</item>
        <item>Add School</item>
        <item>Application Licenses</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="number_ten">19</string>
    <string name="action_setting">Setting</string>
    <string name="other">Others</string>
    <string name="nav_index">Index</string>
    <string name="nav_favourite">Favourite</string>
    <string name="nav_events">Events</string>
    <string name="nav_my_profile">My Profile</string>
    <string name="nav_contact_us">Contact Us</string>
    <string name="nav_feedback">Feedback</string>
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_my_school">My School</string>
    <string name="nav_add_school">Add School</string>
    <string name="nav_use_application">How to use Application</string>
    <string name="nav_user_name">User Name</string>
    <string name="todo">TODO</string>
</resources>
